# Wechat-Read-MCP-in-Rust

./: Cargo.toml  README.md  plan.md
assets/: readme_en.md
src/: error.rs  main.rs  parser.rs  scraper.rs  server.rs
